force-app/main/default/objects/Account/fields/Arbutus_Account__c.field-meta.xml
<CustomField>
    <fullName>Arbutus_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arbutus Account</label>
    <type>Checkbox</type>
</CustomField>