force-app/main/default/objects/Account/fields/Average_collect_days__c.field-meta.xml
<CustomField>
    <fullName>Average_collect_days__c</fullName>
    <formula>IF(
    NOT(ISBLANK(SBQQ__DefaultOpportunity__r.CloseDate)) &amp;&amp; NOT(ISBLANK(CreatedDate)),
    SBQQ__DefaultOpportunity__r.CloseDate - DATEVALUE(CreatedDate),
    NULL
)</formula>
    <label>Average collect days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>