force-app/main/default/objects/Account/fields/Credit_history__c.field-meta.xml
<CustomField>
    <fullName>Credit_history__c</fullName>
    <label>Credit history</label>
    <length>20</length>
    <type>Text</type>
</CustomField>