force-app/main/default/objects/Account/fields/Customer_Numberr__c.field-meta.xml
<CustomField>
    <fullName>Customer_Numberr__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Customer Number</label>
    <type>AutoNumber</type>
</CustomField>