force-app/main/default/objects/Account/fields/Exempt1__c.field-meta.xml
<CustomField>
    <fullName>Exempt1__c</fullName>
    <label>Exempt1 #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>