force-app/main/default/objects/Account/fields/Exempt2__c.field-meta.xml
<CustomField>
    <fullName>Exempt2__c</fullName>
    <label>Exempt2 #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>