force-app/main/default/objects/Account/fields/Finance_Charges__c.field-meta.xml
<CustomField>
    <fullName>Finance_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Charges</label>
    <type>Checkbox</type>
</CustomField>