force-app/main/default/objects/Account/fields/Fundamentals_Account__c.field-meta.xml
<CustomField>
    <fullName>Fundamentals_Account__c</fullName>
    <formula>CreatedBy.Profile.Name = &apos;Fundamental Standard User&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fundamentals Account</label>
    <type>Checkbox</type>
</CustomField>