force-app/main/default/objects/Account/fields/Linkedin_page__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_page__c</fullName>
    <label>Linkedin page</label>
    <type>Url</type>
</CustomField>