force-app/main/default/objects/Account/fields/Manufactuter__c.field-meta.xml
<CustomField>
    <fullName>Manufactuter__c</fullName>
    <label>Manufacturers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rex Power Magnetics</fullName>
            </value>
            <value>
                <fullName>Hitachi Energy</fullName>
            </value>
            <value>
                <fullName>Powell Industries</fullName>
            </value>
            <value>
                <fullName>I-Gard</fullName>
            </value>
            <value>
                <fullName>Sprecher + Schuh</fullName>
            </value>
            <value>
                <fullName>Schneider - CSSP</fullName>
            </value>
            <value>
                <fullName>Avtron</fullName>
            </value>
            <value>
                <fullName>Fundamental Power Solutions</fullName>
            </value>
            <value>
                <fullName>Engineering/Design Feel</fullName>
            </value>
            <value>
                <fullName>Test-1</fullName>
                <isActive>false</isActive>
                <label>Test-1</label>
            </value>
            <value>
                <fullName>Test-2</fullName>
                <isActive>false</isActive>
                <label>Test-2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>