force-app/main/default/objects/Account/fields/Parent_Account_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Reminder__c</fullName>
    <formula>IF(ISBLANK(ParentId), &quot;Please fill in the Parent Account field.&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Reminder</label>
    <type>Text</type>
</CustomField>