force-app/main/default/objects/Account/fields/PO_required_prompt__c.field-meta.xml
<CustomField>
    <fullName>PO_required_prompt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO required prompt</label>
    <type>Checkbox</type>
</CustomField>