force-app/main/default/objects/Account/fields/Quickbooks_Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Invoice_Email__c</fullName>
    <label>Quickbooks Invoice Email</label>
    <type>Email</type>
</CustomField>