force-app/main/default/objects/Account/fields/Quickbooks_Vendor_Id__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Vendor_Id__c</fullName>
    <externalId>true</externalId>
    <label>Quickbooks Vendor Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>