force-app/main/default/objects/Account/fields/Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Name__c</fullName>
    <label>Shipping Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>