force-app/main/default/objects/Account/fields/Tax_code_2__c.field-meta.xml
<CustomField>
    <fullName>Tax_code_2__c</fullName>
    <label>Tax Code 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>HST</fullName>
            </value>
            <value>
                <fullName>PST</fullName>
            </value>
            <value>
                <fullName>NTX</fullName>
                <isActive>false</isActive>
                <label>NTX</label>
            </value>
            <value>
                <fullName>QST</fullName>
                <isActive>false</isActive>
                <label>QST</label>
            </value>
            <value>
                <fullName>RST</fullName>
                <isActive>false</isActive>
                <label>RST</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>