force-app/main/default/objects/Account/fields/Tax_Code_2_Percent__c.field-meta.xml
<CustomField>
    <fullName>Tax_Code_2_Percent__c</fullName>
    <label>Tax Code 2 %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>