force-app/main/default/objects/Account/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Rate</label>
    <referenceTo>Tax_Rate__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>