force-app/main/default/objects/Account/fields/Term_Codes__c.field-meta.xml
<CustomField>
    <fullName>Term_Codes__c</fullName>
    <label>Term Codes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NET 15</fullName>
            </value>
            <value>
                <fullName>NET 30</fullName>
            </value>
            <value>
                <fullName>NET 45</fullName>
            </value>
            <value>
                <fullName>NET 60</fullName>
            </value>
            <value>
                <fullName>NET 90</fullName>
            </value>
            <value>
                <fullName>Due on receipt</fullName>
            </value>
            <value>
                <fullName>CONVERSION</fullName>
            </value>
            <value>
                <fullName>UPON RECEIPT -</fullName>
                <isActive>false</isActive>
                <label>UPON RECEIPT -</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>