force-app/main/default/objects/Account/fields/Will_Call__c.field-meta.xml
<CustomField>
    <fullName>Will_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will Call</label>
    <type>Checkbox</type>
</CustomField>