force-app/main/default/objects/Account/recordTypes/Manufacturer.recordType-meta.xml
<RecordType>
    <fullName>Manufacturer</fullName>
    <active>false</active>
    <description>This is specific to creating Manufacturer records for the Arbutus Group</description>
    <label>Manufacturer</label>
</RecordType>