force-app/main/default/objects/Account/validationRules/Account_Must_be_Flagged.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Must_be_Flagged</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(Fundamental_Account__c = TRUE, Arbutus_Account__c = TRUE))</errorConditionFormula>
    <errorMessage>Please check off if the account is Fundamental or Arbutus</errorMessage>
</ValidationRule>