force-app/main/default/objects/Account/validationRules/Billing_address_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_address_is_required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( BillingAddress )</errorConditionFormula>
    <errorMessage>Billing address is required</errorMessage>
</ValidationRule>