force-app/main/default/objects/Account/validationRules/Fundamental_Tax_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Fundamental_Tax_Code</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  Fundamental_Account__c = TRUE,
  OR(
    ISBLANK(TEXT(Tax_Code_1__c)),
    ISBLANK(BillingState),
    ISBLANK(BillingCountry),
    ISBLANK(ShippingState),
    ISBLANK(ShippingCountry)
  )
)</errorConditionFormula>
    <errorMessage>Fundamental Accounts must have a Tax Code, Billing/Shipping State and Country</errorMessage>
</ValidationRule>