force-app/main/default/objects/Account/listViews/Manufacturers.listView-meta.xml
<ListView>
    <fullName>Manufacturers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Segment__c</field>
        <operation>equals</operation>
        <value>Manufacturer</value>
    </filters>
    <label>AWAL Manufacturers</label>
</ListView>